# PPM

./: CMakeLists.txt  Readme.md
headers/: BoundingBox.h  Camera.h  Intersection.h  Light.h  Material.h  Object.h  Parameters.h  Ray.h  Renderer.h  Scene.h  Texture.h  Vec3.h  utils.h
headers/Lights/: AreaLight.h  PointLight.h  utils.h
headers/LodePNG/: lodepng.h
headers/Materials/: Glass.h  Metal.h  Mirror.h  Plastic.h  Porcelain.h  utils.h
headers/Objects/: Bezier3.h  Cube.h  Plane.h  Sphere.h  TriangleMesh.h  utils.h
headers/Renderers/: PPMRenderer.h  utils.h
sources/: Bezier3.cpp  Camera.cpp  Cube.cpp  PPMRenderer.cpp  Plane.cpp  Scene.cpp  Sphere.cpp  Texture.cpp  TriangleMesh.cpp  Vec3.cpp  lodepng.cpp  main.cpp  utils.cpp
